--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGO_URI=mongodb://localhost:27017/produtos
-JWT_SECRET=sua_chave_secreta_aqui
+JWT_SECRET=banana
 PORT=5000
 BASE_URL=http://localhost:3000
 
